--- a/src/app/(root)/profile/components/ProfileTabs/profileTabs.module.css
+++ b/src/app/(root)/profile/components/ProfileTabs/profileTabs.module.css
@@ -1,3 +1,3 @@
 .tabLink > a{
-    @apply py-2 lg:py-3 xl:py-5 rounded-lg px-14 lg:font-semibold lg:text-2xl text-center border border-secondary hover:bg-secondary duration-100 hover:text-white  
+    @apply py-2 lg:py-4 rounded-lg px-14 lg:font-semibold lg:text-2xl text-center border border-secondary hover:bg-secondary duration-100 hover:text-white  
 }
