--- a/src/components/Posts/postcard.module.css
+++ b/src/components/Posts/postcard.module.css
@@ -1,9 +1,9 @@
 .reactionIcons{
-    @apply flex justify-between text-gray-600
+    @apply grid grid-cols-2 justify-center text-gray-600
 }
 
 .reactionIcons button{
-    @apply flex items-center gap-x-1 py-1  px-3
+    @apply flex justify-center items-center gap-x-1 py-2  px-3
 }
 .reactionIcons button:hover{
     @apply flex items-center gap-x-1 bg-white-secondary  rounded
