--- a/src/components/Posts/postcard.module.css
+++ b/src/components/Posts/postcard.module.css
@@ -1,5 +1,5 @@
 .reactionIcons{
-    @apply grid grid-cols-2 justify-center text-gray-600
+    @apply grid grid-cols-2 justify-center text-gray-600 py-1.5
 }
 
 .reactionIcons button{
