--- a/src/components/Posts/postcard.module.css
+++ b/src/components/Posts/postcard.module.css
@@ -1,16 +1,16 @@
 .reactionIcons{
-    @apply grid grid-cols-2 justify-center text-gray-600 py-1.5
+    @apply grid grid-cols-2 justify-center text-white py-1.5
 }
 
 .reactionIcons button{
     @apply flex justify-center items-center gap-x-1 py-2  px-3
 }
 .reactionIcons button:hover{
-    @apply flex items-center gap-x-1 bg-white-secondary  rounded
+    @apply flex items-center gap-x-1 bg-accent  rounded
 }
 
 .reactionIcons span{
-    @apply text-3xl text-black-secondary
+    @apply text-3xl text-white
 }
 
 .reactionIcons p{
