feat: refactor user profile dropdown and add useOutsideClick hook
- Simplified the UserImage component by removing the profile dropdown logic, focusing on rendering the image.
- Updated the PostActionButton to use the new custom hook `useOutsideClick` for detecting clicks outside the dropdown for better encapsulation.
- Integrated the useOutsideClick hook in the Navbar component to manage the profile dropdown state.
- Enhanced the UserMenuDropdown to conditionally render based on user state without loading state.
- Updated CSS class names for consistency and clarity in styling.

--- a/src/components/Posts/postcard.module.css
+++ b/src/components/Posts/postcard.module.css
@@ -17,10 +17,10 @@
     @apply text-xl font-semibold
 }
 
-.postActionsMenu{
+.postActionsDropdown{
     @apply z-10 w-48 rounded-lg p-2 absolute top-12 bg-accent border border-highlight right-0
 }
 
-.postActionsMenu button{
-    @apply border-black flex items-center justify-start gap-2 w-full px-4 py-3 text-sm text-white hover:bg-highlight duration-150 rounded-lg
+.postActionsDropdown button{
+    @apply border-black flex items-center justify-start gap-2 w-full px-4 py-3 text-sm text-white hover:bg-highlight rounded-lg
 }
