--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer utilities{
     .container{
-        @apply max-w-7xl mx-auto px-4
+        @apply max-w-7xl mx-auto md:px-4
     }
 
     .btn {
