--- a/src/components/shared/Navbar/UserMenuDropDown/userMenuDropdown.module.css
+++ b/src/components/shared/Navbar/UserMenuDropDown/userMenuDropdown.module.css
@@ -4,6 +4,6 @@
 
 .userProfileDropdown a,
 .userProfileDropdown button{
-    @apply border-black flex items-center justify-start gap-2 w-full px-4 py-3 text-sm text-white hover:bg-highlight rounded-lg
+    @apply border-black flex items-center justify-start gap-2 w-full px-4 py-3 text-sm xl:text-lg text-white hover:bg-highlight rounded-lg
 }
 
